# controllers/user.go
@@ -10,12 +10,29 @@ import (
 	"gorm.io/gorm"
 )
 
+// GetAllUsers возвращает список всех пользователей
+// @Summary Получить всех пользователей
+// @Tags users
+// @Produce json
+// @Success 200 {array} models.User
+// @Router /users/ [get]
 func GetAllUsers(c *gin.Context) {
 	var users []models.User
 	database.DB.Find(&users)
 	c.JSON(200, users)
 }
 
+// GetUserByUsernameAndPassword возвращает пользователя по имени пользователя и паролю
+// @Summary Получить пользователя по имени пользователя и паролю
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param username query string true "Имя пользователя"
+// @Param password query string true "Пароль"
+// @Success 200 {object} models.User
+// @Failure 400 {object} models.ErrorMessage
+// @Failure 404 {object} models.ErrorMessage
+// @Router /users/login [get]
 func GetUserByUsernameAndPassword(c *gin.Context) {
 	username := c.Query("username")
 	password := c.Query("password")
@@ -36,6 +53,17 @@ func GetUserByUsernameAndPassword(c *gin.Context) {
 
 }
 
+// GetUserByID возвращает пользователя по ID
+// @Summary Получить пользователя по ID
+// @Description Получить пользователя по его ID
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path string true "ID пользователя"
+// @Success 200 {object} models.User
+// @Failure 404 {object} models.ErrorMessage
+// @Failure 500 {object} models.ErrorMessage
+// @Router /users/{id} [get]
 func GetUserByID(c *gin.Context) {
 	userID := c.Param("id")
 
@@ -53,6 +81,16 @@ func GetUserByID(c *gin.Context) {
 	c.JSON(200, user)
 }
 
+// CreateUser создает нового пользователя
+// @Summary Создать нового пользователя
+// @Description Создает нового пользователя с предоставленными данными
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body models.User true "Объект пользователя"
+// @Success 201 {object} models.User
+// @Failure 400 {object} models.ErrorMessage
+// @Router /users/ [post]
 func CreateUser(c *gin.Context) {
 	var newUser models.User
 	c.BindJSON(&newUser)
@@ -67,6 +105,18 @@ func CreateUser(c *gin.Context) {
 	c.JSON(201, newUser)
 }
 
+// UpdateUser обновляет данные пользователя по ID
+// @Summary Обновить данные пользователя
+// @Description Обновляет данные существующего пользователя по его ID
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path string true "ID пользователя"
+// @Param user body models.User true "Обновленный объект пользователя"
+// @Success 200 {object} models.User
+// @Failure 400 {object} models.ErrorMessage
+// @Failure 404 {object} models.ErrorMessage
+// @Router /users/{id} [put]
 func UpdateUser(c *gin.Context) {
 	userID := c.Param("id")
 
@@ -87,6 +137,17 @@ func UpdateUser(c *gin.Context) {
 	c.JSON(200, existingUser)
 }
 
+// DeleteUser удаляет пользователя по ID
+// @Summary Удалить пользователя по ID
+// @Description Удаляет пользователя по его ID
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path string true "ID пользователя"
+// @Success 200 {object} models.SuccessMessage
+// @Failure 404 {object} models.ErrorMessage
+// @Failure 500 {object} models.ErrorMessage
+// @Router /users/{id} [delete]
 func DeleteUser(c *gin.Context) {
 	userID := c.Param("id")
 
